# langsmith-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  kaizen.config.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
.kaizen-hooks/: pre-push
docs/: QOL_FEATURES.md  QOL_IMPROVEMENTS.md  SESSION_DIRECTIVES.md  TLDR.md  devto-article.md
docs/dev/: LANGSMITH_TEAM_QUESTIONS.md  MCP_PARITY.md
skills/langsmith/: SKILL.md
skills/langsmith/docs/: examples.md
skills/langsmith/references/: cache-recipes.md  cost-analysis.md  datasets.md  examples.md  projects.md  prompts.md  runs.md  (+2 more)
src/langsmith_cli/: SKILL.md  cache.py  config.py  field_analysis.py  filtering.py  filters.py  main.py  output.py  project_resolution.py  run_helpers.py  time_parsing.py  utils.py
tests/: conftest.py  test_annotation_queues.py  test_cache.py  test_cache_benchmark.py  test_datasets.py  test_e2e.py  test_examples.py  test_experiments.py  test_feedback.py  test_fetch_helpers.py  test_field_analysis.py  test_filters.py  test_logging.py  test_main.py  test_output_flag.py  test_projects.py  test_prompts.py  test_runs.py  test_runs_analyze.py  test_runs_discovery.py  test_runs_export.py  test_runs_get.py  test_runs_list.py  test_runs_pricing.py  test_runs_roots.py  test_runs_sample.py  test_runs_search.py  test_runs_usage.py  test_runs_view.py  test_self.py  test_self_cmd.py  test_smoke.py  test_time_window_and_api_limit.py  test_utils.py
(+34 files in other folders)
